split brwa into brwabase and brwabox

--- a/brwabox.sty
+++ b/brwabox.sty
@@ -1,8 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{brwa}[2020/09/01 0.0.0]
-
-\RequirePackage{amsmath}
-\RequirePackage{amssymb}
+\ProvidesPackage{brwabox}[2020/09/01 0.0.1]
 
 \newcounter{curprob}
 \NewDocumentCommand{\addsol}{o o}{
