added some more things

--- a/brwabase.sty
+++ b/brwabase.sty
@@ -5,10 +5,15 @@
 \RequirePackage{amssymb}
 \RequirePackage{xparse}
 
+\RenewDocumentCommand{\AA}{}{\mathbb A} %FIX THIS FOR CHEM
 \NewDocumentCommand{\CC}{}{\mathbb C}
 \NewDocumentCommand{\PP}{}{\mathbb P}
+\NewDocumentCommand{\QQ}{}{\mathbb Q}
 \NewDocumentCommand{\RR}{}{\mathbb R}
 \NewDocumentCommand{\ZZ}{}{\mathbb Z}
 
 \NewDocumentCommand{\x}{}{\times}
 
+\DeclareMathOperator{\N}{N}
+\DeclareMathOperator{\T}{T}
+\DeclareMathOperator{\tea}{char}
