--- a/brwabox.sty
+++ b/brwabox.sty
@@ -34,5 +34,7 @@
 
 \ifbrw@notes
 	\declaretheorem[numberwithin=section,name=Definition]{defn}
-	\declaretheorem[sibling=defn,name=Theorem]{thm}
+	\declaretheorem[sibling=defn,name=Theorem]{theo}
+	\declaretheorem[sibling=defn,name=Fact]{fact}
+	\declaretheorem[sibling=defn,name=Example]{exm}
 \fi
