--- a/brwabox.sty
+++ b/brwabox.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{brwabox}[2020/09/01 0.0.1]
+\ProvidesPackage{brwabox}[2020/09/01 0.0.2]
 
 \RequirePackage{pgfopts}
 \RequirePackage{amsthm} 
@@ -37,4 +37,5 @@
 	\declaretheorem[sibling=defn,name=Theorem]{theo}
 	\declaretheorem[sibling=defn,name=Fact]{fact}
 	\declaretheorem[sibling=defn,name=Example]{exm}
+	\declaretheorem[sibling=defn,name=Lemma]{lem}
 \fi
