fix xcolor svgnames

--- a/brwabox.sty
+++ b/brwabox.sty
@@ -5,7 +5,7 @@
 \RequirePackage{enumitem}
 \RequirePackage{amsthm} 
 \RequirePackage{thmtools}
-\PassOptionsToClass{svgnames}{xcolor} \RequirePackage{xcolor}
+\PassOptionsToPackage{svgnames}{xcolor} \RequirePackage{xcolor}
 
 \newif\ifbrw@pset
 \newif\ifbrw@notes
