--- a/brwabase.sty
+++ b/brwabase.sty
@@ -26,6 +26,8 @@
 \DeclareMathOperator{\T}{T}
 \DeclareMathOperator{\tea}{char}
 \DeclareMathOperator{\Gal}{Gal}
+\DeclareMathOperator{\gal}{Gal}
+\DeclareMathOperator{\disc}{disc}
 
 \DeclarePairedDelimiter{\parens}{(}{)}
 \DeclarePairedDelimiter{\mg}{\Vert}{\Vert}
