--- a/brwabase.sty
+++ b/brwabase.sty
@@ -11,24 +11,35 @@
 \RenewDocumentCommand{\AA}{}{\mathbb A} %FIX THIS FOR CHEM
 \NewDocumentCommand{\CC}{}{\mathbb C}
 \NewDocumentCommand{\FF}{}{\mathbb F}
+\NewDocumentCommand{\NN}{}{\mathbb N}
 \NewDocumentCommand{\PP}{}{\mathbb P}
 \NewDocumentCommand{\QQ}{}{\mathbb Q}
 \NewDocumentCommand{\RR}{}{\mathbb R}
 \NewDocumentCommand{\ZZ}{}{\mathbb Z}
 
+\NewDocumentCommand{\tenp}{}{\otimes}
+\NewDocumentCommand{\gan}{}{\varphi}
 \NewDocumentCommand{\x}{}{\times}
 \NewDocumentCommand{\eps}{}{\varepsilon}
 \NewDocumentCommand{\ol}{m}{\overline{#1}}
+\NewDocumentCommand{\Cl}{}{\mathcal C \ell}
 
 \NewDocumentCommand{\gl}{}{\mathfrak{gl}}
 
 \DeclareMathOperator{\N}{N}
 \DeclareMathOperator{\T}{T}
+\DeclareMathOperator{\ord}{ord}
+\DeclareMathOperator{\dom}{dom}
 \DeclareMathOperator{\tea}{char}
+\DeclareMathOperator{\sep}{sep}
 \DeclareMathOperator{\Gal}{Gal}
 \DeclareMathOperator{\gal}{Gal}
+\DeclareMathOperator{\Aut}{Aut}
+\DeclareMathOperator{\aut}{Aut}
 \DeclareMathOperator{\disc}{disc}
+\DeclareMathOperator{\spec}{Spec}
 
 \DeclarePairedDelimiter{\parens}{(}{)}
 \DeclarePairedDelimiter{\mg}{\Vert}{\Vert}
 \DeclarePairedDelimiter{\abs}{|}{|}
+\DeclarePairedDelimiter{\set}{\{}{\}}
