--- a/brwabase.sty
+++ b/brwabase.sty
@@ -32,12 +32,22 @@
 \DeclareMathOperator{\dom}{dom}
 \DeclareMathOperator{\tea}{char}
 \DeclareMathOperator{\sep}{sep}
+\DeclareMathOperator{\disc}{disc}
+\DeclareMathOperator{\supp}{supp}
+
 \DeclareMathOperator{\Gal}{Gal}
 \DeclareMathOperator{\gal}{Gal}
 \DeclareMathOperator{\Aut}{Aut}
 \DeclareMathOperator{\aut}{Aut}
-\DeclareMathOperator{\disc}{disc}
+\DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\spec}{Spec}
+\DeclareMathOperator{\Div}{Div}
+\DeclareMathOperator{\divg}{Div}
+\DeclareMathOperator{\divis}{div}
+\DeclareMathOperator{\Pic}{Pic}
+\DeclareMathOperator{\pic}{Pic}
+
+\RenewDocumentCommand{\div}{}{\divis}
 
 \DeclarePairedDelimiter{\parens}{(}{)}
 \DeclarePairedDelimiter{\mg}{\Vert}{\Vert}
