add stickered theorems feature

--- a/brwabase.sty
+++ b/brwabase.sty
@@ -18,6 +18,7 @@
 \NewDocumentCommand{\ZZ}{}{\mathbb Z}
 
 \NewDocumentCommand{\tenp}{}{\otimes}
+\NewDocumentCommand{\dum}{}{\oplus}
 \NewDocumentCommand{\gan}{}{\varphi}
 \NewDocumentCommand{\x}{}{\times}
 \NewDocumentCommand{\eps}{}{\varepsilon}
@@ -25,6 +26,7 @@
 \NewDocumentCommand{\Cl}{}{\mathcal C \ell}
 
 \NewDocumentCommand{\gl}{}{\mathfrak{gl}}
+\RenewDocumentCommand{\sl}{}{\mathfrak{sl}}
 
 \DeclareMathOperator{\N}{N}
 \DeclareMathOperator{\T}{T}
@@ -34,6 +36,10 @@
 \DeclareMathOperator{\sep}{sep}
 \DeclareMathOperator{\disc}{disc}
 \DeclareMathOperator{\supp}{supp}
+
+\DeclareMathOperator{\ad}{ad}
+\DeclareMathOperator{\rad}{rad}
+\DeclareMathOperator{\tr}{tr}
 
 \DeclareMathOperator{\Gal}{Gal}
 \DeclareMathOperator{\gal}{Gal}
@@ -46,6 +52,12 @@
 \DeclareMathOperator{\divis}{div}
 \DeclareMathOperator{\Pic}{Pic}
 \DeclareMathOperator{\pic}{Pic}
+\DeclareMathOperator{\Lie}{Lie}
+\DeclareMathOperator{\lie}{Lie}
+\DeclareMathOperator{\Hom}{Hom}
+
+\DeclareMathOperator{\GL}{GL}
+\DeclareMathOperator{\SL}{SL}
 
 \RenewDocumentCommand{\div}{}{\divis}
 
@@ -53,3 +65,4 @@
 \DeclarePairedDelimiter{\mg}{\Vert}{\Vert}
 \DeclarePairedDelimiter{\abs}{|}{|}
 \DeclarePairedDelimiter{\set}{\{}{\}}
+\DeclarePairedDelimiter{\sqrb}{[}{]}
