--- a/brwaobj.sty
+++ b/brwaobj.sty
@@ -1,8 +1,10 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{brwaobj}[2021/09/01 0.0.0]
 
+\RequirePackage{tikz}
 \RequirePackage{wasysym}
 \RequirePackage{fontawesome}
+\RequirePackage{amsbsy}
 
 \NewDocumentCommand{\TemporaryTheoremName}{}{}
 
@@ -15,7 +17,7 @@
 		\expandafter\RenewDocumentCommand\csname the#1container\endcsname{}{\arabic{section}.\arabic{#1container}}%
 	}
 	\newcounter{#1}[section]
-	\NewDocumentEnvironment{#1}{s o}{
+	\NewDocumentEnvironment{#1}{s o o}{
 		\begin{#1container}
 		\IfNoValueTF{#4}{
 			\stepcounter{#1}
@@ -25,7 +27,7 @@
 		}
 		\IfNoValueTF{##2}{}{\textnormal{(##2)}}
 		\IfBooleanTF{##1}{}{
-			{\marginnote{\Large\textnormal{#3}}\hspace{-2mm}}%
+			{\marginnote{\Large\textnormal{#3}\par}\hspace{-2mm}}%
 		}
 	}{
 		\end{#1container}
@@ -41,7 +43,17 @@
 \colorlet{DarkPurple}{Purple!80!Black}
 
 % define colorsymbols
+\NewDocumentCommand{\bigplus}{}{\mathord{\begin{tikzpicture}[baseline=0ex, line width=2.5, scale=0.17]
+\draw (1,0) -- (1,2);
+\draw (0,1) -- (2,1);
+\end{tikzpicture}}}
+
 \NewDocumentCommand{\colorstar}{m}{\textcolor{#1}{$\bigstar$}}
 \NewDocumentCommand{\colormoon}{m}{\textcolor{#1}{\LEFTCIRCLE}}
 \NewDocumentCommand{\colorlozenge}{m}{\textcolor{#1}{\blacklozenge}}
 \NewDocumentCommand{\colorflask}{m}{\textcolor{#1}{\faBeaker}}
+\NewDocumentCommand{\colordisk}{m}{\textcolor{#1}{\CIRCLE}}
+\NewDocumentCommand{\colordagger}{m}{\textcolor{#1}{\dagger}}
+\NewDocumentCommand{\colortrileft}{m}{\textcolor{#1}{\blacktriangleleft}}
+\NewDocumentCommand{\colortriright}{m}{\textcolor{#1}{\blacktriangleright}}
+\NewDocumentCommand{\colorplus}{m}{\textcolor{#1}{$\bigplus$}}
