--- a/brwaobj.sty
+++ b/brwaobj.sty
@@ -51,7 +51,7 @@
 \NewDocumentCommand{\colorstar}{m}{\textcolor{#1}{$\bigstar$}}
 \NewDocumentCommand{\colormoon}{m}{\textcolor{#1}{\LEFTCIRCLE}}
 \NewDocumentCommand{\colorlozenge}{m}{\textcolor{#1}{\blacklozenge}}
-\NewDocumentCommand{\colorflask}{m}{\textcolor{#1}{\faBeaker}}
+\NewDocumentCommand{\colorflask}{m}{\textcolor{#1}{\faFlask}}
 \NewDocumentCommand{\colordisk}{m}{\textcolor{#1}{\CIRCLE}}
 \NewDocumentCommand{\colordagger}{m}{\textcolor{#1}{\dagger}}
 \NewDocumentCommand{\colortrileft}{m}{\textcolor{#1}{\blacktriangleleft}}
