--- a/brwaobj.sty
+++ b/brwaobj.sty
@@ -1,6 +1,8 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{brwaobj}[2021/09/01 0.0.0]
 
+\RequirePackage{expl3}
+\RequirePackage{xparse}
 \RequirePackage{tikz}
 \RequirePackage{wasysym}
 \RequirePackage{fontawesome}
