add \id and commands to automatically start new lecture pages

--- a/brwabase.sty
+++ b/brwabase.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{brwabase}[2021/10/29 0.0.3]
+\ProvidesPackage{brwabase}[2022/04/28 0.0.4]
 
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
@@ -48,6 +48,7 @@
 \DeclareMathOperator{\supp}{supp}
 
 \DeclareMathOperator{\ad}{ad}
+\DeclareMathOperator{\id}{id}
 \DeclareMathOperator{\rad}{rad}
 \DeclareMathOperator{\tr}{tr}
 
