--- a/brwabox.sty
+++ b/brwabox.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{brwabox}[2021/11/06 0.1.1]
+\ProvidesPackage{brwabox}[2022/04/28 0.1.2]
 
 \RequirePackage{amsthm}
 \RequirePackage{xparse}
@@ -45,12 +45,21 @@
 	\NewDocumentCommand{\addlabeledsol}{s m O{None}}{
         \stepcounter{curprob}
 		\IfBooleanTF{#1}{
-			{\large \textbf{Solution \arabic{section}.\arabic{curprob} (#2).}} Collaborators/Sources Consulted:
+			{\large \textbf{Solution \arabic{curprob} (#2).}} Collaborators/Sources Consulted:
     		#3
 		}{
 			{\large \textbf{Solution \arabic{section}.\arabic{curprob} (#2).}} Collaborators/Sources Consulted:
     		#3
 		}
+	}
+	\NewDocumentCommand{\addblanksol}{s}{
+        \stepcounter{curprob}
+		\IfBooleanTF{#1}{
+			{\large \textbf{Solution \arabic{curprob}.}}
+    	
+		}{
+			{\large \textbf{Solution \arabic{section}.\arabic{curprob}.}}
+    	}
 	}
 	\NewDocumentCommand{\skipsol}{}{\stepcounter{curprob}}
 	\declaretheorem[numbered=no,name=Lemma]{lem}
@@ -58,6 +67,20 @@
 
 \ifbrw@notes
 	\numberwithin{figure}{section}
+	\NewDocumentCommand{\nsec}{m m O{Lecture}}{
+		\section*{#3 #1: #2}
+		\setcounter{section}{#1}
+		\resetcounter{subsection}
+		\resetcounter{defn}
+		\resetcounter{defncontainer}
+	}
+	\NewDocumentCommand{\nbsec}{m O{Lecture}}{
+		\section*{#2 #1}
+		\setcounter{section}{#1}
+		\resetcounter{subsection}
+		\resetcounter{defn}
+		\resetcounter{defncontainer}
+	}
 	\ifbrw@fancy
 		\reversemarginpar
 
