--- a/brwabase.sty
+++ b/brwabase.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{brwabase}[2022/04/28 0.0.4]
+\ProvidesPackage{brwabase}[2022/04/28 0.0.5]
 
 \RequirePackage{amsmath}
 \RequirePackage{amssymb}
@@ -18,6 +18,7 @@
 \NewDocumentCommand{\CC}{}{\mathbb C}
 \NewDocumentCommand{\EE}{}{\mathbb E}
 \NewDocumentCommand{\FF}{}{\mathbb F}
+\NewDocumentCommand{\HH}{}{\mathbb H}
 \NewDocumentCommand{\NN}{}{\mathbb N}
 \NewDocumentCommand{\PP}{}{\mathbb P}
 \NewDocumentCommand{\QQ}{}{\mathbb Q}
