--- a/brwaobj.sty
+++ b/brwaobj.sty
@@ -8,6 +8,8 @@
 \RequirePackage{fontawesome}
 \RequirePackage{amsbsy}
 
+\usetikzlibrary{shapes}
+
 \NewDocumentCommand{\resetcounter}{m}{\setcounter{#1}{0}}
 
 % custom theorem
