--- a/brwabase.sty
+++ b/brwabase.sty
@@ -13,6 +13,8 @@
 \sisetup{
 	exponent-product = \cdot,
 }
+\PassOptionsToPackage{svgnames}{xcolor} \RequirePackage{xcolor}
+\RequirePackage{listings}
 
 \RenewDocumentCommand{\AA}{}{\mathbb A} %FIX THIS FOR CHEM
 \NewDocumentCommand{\CC}{}{\mathbb C}
@@ -35,6 +37,7 @@
 \NewDocumentCommand{\Cl}{}{\mathcal C \ell}
 \RenewDocumentCommand{\d}{}{\,\textnormal{d}}
 \NewDocumentCommand{\opera}{m}{\operatorname{#1}}
+\NewDocumentCommand{\lgi}{}{\log^*}
 
 \NewDocumentCommand{\gl}{}{\mathfrak{gl}}
 \RenewDocumentCommand{\sl}{}{\mathfrak{sl}}
@@ -67,6 +70,8 @@
 \DeclareMathOperator{\Lie}{Lie}
 \DeclareMathOperator{\lie}{Lie}
 \DeclareMathOperator{\Hom}{Hom}
+\DeclareMathOperator{\diam}{diam}
+\DeclareMathOperator{\lc}{span}
 
 \DeclareMathOperator{\GL}{GL}
 \DeclareMathOperator{\SL}{SL}
